[package]
name = "file_extract"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["blocking", "json"] }
zip-extract = "0.1.3"
tempfile = "3.9.0"
glob = "0.3.1"
serde_json = { version = "1.0", features = ["preserve_order"] }
clap = { version = "4.5.9", features = ["derive"] }
